# noter

./: .env.example  .gitignore  README.md  build_gui.py  create_release.py  gui_launcher.py  install.bat  install.sh  launch_noter.bat  pyproject.toml  requirements.txt  settings_dialog.py  test_latex_suite.py  uninstall.bat  uninstall.sh  一键生成笔记.bat  一键生成笔记.command  一键生成笔记.sh  创建桌面快捷方式.py  启动GUI.bat  启动GUI.vbs  调试启动.bat  重新创建快捷方式.bat
config/: latex_format_rules.md  prompts.yaml  prompts_subjects.yaml  settings.json.example
gui_launcher/: drop_area.py  file_card.py  file_list_area.py  log_panel.py  obsidian_panel.py  settings_manager.py  settings_page.py  theme.py  title_bar.py  widget_factory.py
src/pdf_summarizer/: __init__.py  __main__.py  ai_client.py  cache.py  chunking.py  cli.py  cli_wizard.py  config.py  default_template.py  docx_writer.py  exam_analyzer.py  incremental.py  latex_renderer.py  latex_to_omml.py  models.py  obsidian_generator.py  output_formats.py  pdf_reader.py  processing_service.py  rate_limiter.py  stats.py  (+4 more)
tests/: __init__.py  test_ai_client.py  test_ai_client_multimodal.py  test_chunking.py  test_cli_wizard.py  test_drop_area.py  test_file_card.py  test_file_list_area.py  test_log_panel.py  test_obsidian_generator.py  test_obsidian_latex.py  test_obsidian_panel.py  test_pdf_reader.py  test_pdf_reader_new.py  test_processing_service.py  test_settings_manager.py  test_settings_page.py  test_summarizer.py  test_summarizer_multimodal.py  test_summary_parser.py  test_theme.py  test_title_bar.py  test_vault_service.py  test_widget_factory.py
